--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4472,7 +4472,7 @@ textarea::placeholder {
   }
 }
 .tl-banner-single-card-2 {
-  background-image: url(../images/tl-2/Banner\ 6.jpg);
+  background-image: url(../images/tl-2/FQ\ banner1.jpg);
 }
 .tl-banner-single-card-3 {
   background-image: url(../images/tl-2/Banner\ 7.jpg);
